--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,16 @@
 .App {
   text-align: center;
+  min-height: 100%;
+  background-color: yellow;
 }
+
+/* managing sticky button */
+
+/* .App:after {
+  content: "";
+  display: block;
+  height: 100px;
+} */
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
@@ -20,6 +30,10 @@
 
 .App-intro {
   font-size: large;
+}
+.footer {
+  position: sticky;
+  bottom: 0;  
 }
 
 @keyframes App-logo-spin {
