--- a/src/app/main_page/main-page-css/main-page.css
+++ b/src/app/main_page/main-page-css/main-page.css
@@ -6,3 +6,13 @@
     margin: 0 auto;
 }
 
+.animation {
+    position: absolute;
+    right: 0;
+    width: 100px;
+    margin-right: -100px;
+    border: 1px solid red;
+    background-color: red;
+    color: white;
+    text-align: center;
+}
