--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,16 @@
-html, body {
+html {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
   height: 100%;
+  min-width: 320px;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  height: 100%;
+  width: 100%;
 }
 
