--- a/src/app/main_page/main-page-css/main-page.css
+++ b/src/app/main_page/main-page-css/main-page.css
@@ -11,10 +11,11 @@
     position: absolute;
     right: 0;
     width: 100px;
-    margin-right: -100px;
+    margin-right: -150px;
     border: 1px solid red;
     background-color: red;
     color: white;
     text-align: center;
-    z-index: 1;
+    z-index: 5;
+    /* display: none; */
 }
